# SiPM_array

./: #submitter_top.pl#  #vis.mac#  .gitignore  CMakeLists.txt  Hawl.cc  Hawl.cc~  SiPM.cc  beam.txt  cylinder_photon.txt  global_sbatch.sh  gun.mac  gun_top.mac  hani_nt_SiPM_nt_SiPM.csv  init_vis.mac  photon.txt  run_simulation.sh  submitter.pl  submitter_1.pl  submitter_top.pl  submitter_top.pl~
data_top/: output_1.root  output_10.root  output_11.root  output_12.root  output_13.root  output_14.root  output_15.root  output_2.root  output_3.root  output_4.root  output_5.root  output_6.root  output_7.root  output_8.root  output_9.root
errors_top/: 11
include/: ActionInitialization.hh  Construction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SiPMSensitiveDetector.hh  SteppingAction.hh
logs_top/: 1  10  11  12  13  14  15  2  3  4  5  6  7  8  9
plot/: hani_nt_SiPM.csv  plot.py
sipm_array/: SiPM.cc  gun.mac
sipm_array/include/: ActionInitialization.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SiPMSensitiveDetector.hh  SteppingAction.hh
sipm_array/src/: ActionInitialization.cc  Construction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiPMSensitiveDetector.cc  SteppingAction.cc
src/: ActionInitialization.cc  Construction.cc  Construction.cc~  EventAction.cc  EventAction.cc~  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  RunAction.cc  SiPMSensitiveDetector.cc  SteppingAction.cc
